unpacked Identity to make it editable

--- a/Bangazon/appsettings.json
+++ b/Bangazon/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLExpress;Database=BangazonSite;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost\\SQLExpress;Database=BangazonSite;Trusted_Connection=True;",
+    "BangazonContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Bangazon;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
